--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,10 @@
                                 <suiteXmlFile>local.xml</suiteXmlFile>
                             </suiteXmlFiles>
                             <!-- No -javaagent here -->
+                            <!-- Exclude BrowserStack SDK from classpath to prevent ServiceLoader errors -->
+                            <classpathDependencyExcludes>
+                                <classpathDependencyExclude>com.browserstack:browserstack-java-sdk</classpathDependencyExclude>
+                            </classpathDependencyExcludes>
                         </configuration>
                     </plugin>
                 </plugins>
